--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=vacation-packages
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
+spring.sql.init.mode=always
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./db/vacationpackage
+spring.datasource.username=sa
+spring.datasource.password=password
 
